Fixed up some layout issues

--- a/anthonyhoang-dev/src/styles/App.css
+++ b/anthonyhoang-dev/src/styles/App.css
@@ -3,6 +3,7 @@
   height: 100vh;
   display: flex;
   justify-content: center;
-  align-items: center;
   background-color: rgb(190, 190, 248);
+  overflow-x: hidden;
+  position: relative;
 }
