--- a/anthonyhoang-dev/src/styles/Home.css
+++ b/anthonyhoang-dev/src/styles/Home.css
@@ -1,12 +1,11 @@
 .home-body {
     width: 100%;
-    height: 35rem;
+    height: fit-content;
     display: flex;
     flex-direction: column;
     font-family: 'Inter', sans-serif;
     position: relative;
     margin-top: 4rem;
-    padding-left: 1rem;
     gap: 0.5rem
 }
 
@@ -44,8 +43,8 @@
 
 .about-me-body {
     width: 100%;
-    height: 8rem;
-    margin-top: 4rem;
+    height: fit-content;
+    margin-top: 3rem;
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
@@ -59,6 +58,7 @@
 .about-me-main {
     font-size: 0.9rem;
     font-weight: 400;
+    margin-top: 0.5rem;
 }
 
 .about-me-sub {
