--- a/anthonyhoang-dev/src/styles/Layout.css
+++ b/anthonyhoang-dev/src/styles/Layout.css
@@ -1,11 +1,13 @@
 .layout-container {
     width: 100%;
-    height: 100%;
+    height: fit-content;
     overflow-y: scroll;
     overflow-x: hidden;
     display: flex;
     flex-direction: column;
     background-color: white;
     font-family: 'Poppins', sans-serif;
+    padding-left: 1rem;
     min-width: 430px;
+    gap: 3rem;
 }
