--- a/anthonyhoang-dev/src/styles/Navbar.css
+++ b/anthonyhoang-dev/src/styles/Navbar.css
@@ -2,11 +2,13 @@
     position: fixed;
     width: 100%;
     height: 4rem;
-    
     display: flex;  
     flex-direction: row;
     justify-content: space-between;
     z-index: 999;
+    background-color: white;
+    border-bottom: 1px solid rgb(214, 214, 214);
+    left: 0;
 }
 
 .navbar-home, .navbar-selections {
@@ -14,14 +16,20 @@
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.navbar-home {
     margin-left: 1rem;
+}
+
+.navbar-selections {
+    gap: 1rem;
+    width: fit-content;
     margin-right: 1rem;
 }
 
-
 .navbar-selects {
     width: fit-content;
-    padding: 0.5rem;
     font-size: 0.8rem;
     height: 100%;
     display: flex;
