--- a/anthonyhoang-dev/src/styles/Projects.css
+++ b/anthonyhoang-dev/src/styles/Projects.css
@@ -1,8 +1,9 @@
 .projects-body {
     display: flex;
     flex-direction: column;
-    padding-left: 1rem;
     font-family: 'Inter', sans-serif;
+    width: 100%;
+    height: fit-content;
 }
 
 .projects-title {
@@ -11,9 +12,9 @@
 }
 
 .projects-layout {
-    margin-top: 0.5rem;
+    margin-top: 1rem;
     width: 100%;
-    height: 10rem;
+    height: fit-content;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
     gap: 1rem;
